Got rid of duplicate recipes and fixed css issue
-- Added some JavaScript to check for duplicate recipes
-- changed the margin at the top of the labels in the fieldset so the favorite button wouldn't go out of bounds

--- a/assets/css/nutritionStyle.css
+++ b/assets/css/nutritionStyle.css
@@ -69,8 +69,13 @@ h1 {
     width: 25rem;
 }
 
+fieldset label {
+    margin-top: 25px;
+}
+
 .card-contents {
     text-align: center;
+    /* padding-bottom: 8px; */
 }
 
 .card-contents-1 {
@@ -130,6 +135,10 @@ h1 {
     height: 56rem;
     width: 30rem;
     text-align: center;
+}
+
+.recipeImages {
+    /* max-height: 250px; */
 }
 
 .submit_button {
